Applications/MonitoringMetrics/base/resources/network-policy-vmauth-backend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vmauth-backend-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: auth
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
      ports:
        - protocol: TCP
          port: 8428
