Applications/MonitoringMetrics/base/resources/network-policy-vmauth-to-victoriametrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vmauth-to-victoriametrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: auth
      ports:
        - protocol: TCP
          port: 8428
